Minor about bio change. Footer content overlap issue fixed.

--- a/client/src/about/about.css
+++ b/client/src/about/about.css
@@ -36,4 +36,5 @@
    	font-size: 1.1em;
    	padding: 10px; 
    	z-index: 2;
+   	padding-bottom: 1px;
 }
