--- a/client/src/footer/footer.css
+++ b/client/src/footer/footer.css
@@ -1,11 +1,9 @@
 .footer{
-  margin-top: 1rem;
   padding: .5rem;
   background-color: #BEBEBE;
-  position: fixed;
+  position: relative;
   bottom: 0;
   left: 0;
-  width: 100%;
   text-align: center;
   display: block;
 }
